# nessuno

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ips/: Cargo.toml
ips/src/: lib.rs
res/: LICENSE.cozette  cozette.bdf
src/: apu.rs  audio.rs  bus.rs  cartridge.rs  controller.rs  cpu.rs  input.rs  lib.rs  main.rs  mapper.rs  ppu.rs  romdb.rs  save.rs  screen.rs  system.rs  system_debug_cpu.rs
src/apu/: channel.rs  lookup.rs  misc.rs  mixer.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/audio/: mod.rs
src/bus/: dummy.rs  mod.rs
src/cartridge/: mod.rs
src/controller/: mod.rs
src/cpu/: instr.rs  mod.rs
src/mapper/: mapper000.rs  mapper001.rs  mapper002.rs  mapper003.rs  mapper004.rs  mapper007.rs  mapper009.rs  mod.rs
src/ppu/: mod.rs  palette.rs
src/screen/: backend.rs  mod.rs  textwriter.rs
src/system/: mod.rs
src/system_debug_cpu/: mod.rs
